--- a/Assignment1/input.html
+++ b/Assignment1/input.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Input Types Example</title>
+    <title>Input </title>
     <style>
         body {
             font-family: Arial, sans-serif;
