--- a/Assignment1/student_registration.html
+++ b/Assignment1/student_registration.html
@@ -3,11 +3,15 @@
 
 <head>
     <title>Student Registration</title>
+    
+    //Applying Internal Css inorder to beautify the site
     <style>
+        //fonts
         body {
             font-family: Arial, sans-serif;
         }
-        
+
+        //wrapping up all the content 
         .container {
             max-width: 400px;
             margin: 0 auto;
